...
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:orientation="vertical"
    tools:context=".shfilter.SHFilterFragment">

    <EditText
        android:id="@+id/shfilter_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Name"
        android:inputType="text" />

    <EditText
        android:id="@+id/shfilter_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Author"
        android:inputType="textPersonName" />

    <LinearLayout
...
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textSize="16dp"
            android:text="Distance"/>

        <SeekBar
            android:id="@+id/shfilter_distance_to"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:tooltipText="Distance" />

        <TextView
            android:id="@+id/shfilter_distance_to_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="16dp"
            android:text="0 km" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
...
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textSize="16dp"
            android:text="Hunt Length Min" />

        <SeekBar
            android:id="@+id/shfilter_length_hunt_min"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9" />

        <TextView
            android:id="@+id/shfilter_length_hunt_min_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="16dp"
            android:text="0 km" />

...
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textSize="16dp"
            android:text="Hunt Length Max" />

        <SeekBar
            android:id="@+id/shfilter_length_hunt_max"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9" />

        <TextView
            android:id="@+id/shfilter_length_hunt_max_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="16dp"
            android:text="0 km" />

...
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="Rating Min"
            android:textSize="16dp" />

        <SeekBar
            android:id="@+id/shfilter_min_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9" />

        <TextView
            android:id="@+id/shfilter_rating_min_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="16dp"
            android:text="1" />
    </LinearLayout>
...
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="Rating Max"
            android:textSize="16dp"/>

        <SeekBar
            android:id="@+id/shfilter_max_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9" />

        <TextView
            android:id="@+id/shfilter_rating_max_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="16dp"
            android:text="5" />
    </LinearLayout>
...
