...
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_unlock">Unlock</string>
    <string name="item_hint_timeunlock">Time to unlock</string>
    <string name="hint_item_unlock_button">Unlock</string>
    <string name="hint_item_buy_button">Buy</string>
    <string name="options_button_filter">Filter</string>
    <string name="distance_to_start">Distance to start</string>
    <string name="hunt_length">Hunt Length</string>
    <string name="rating">Rating</string>
    <string name="fragment_tag_hint_view">fragment_hint_view</string>
    <string name="fragment_tag_game_map">fragment_game_map</string>
    <string name="fragment_tag_map">fragment_map</string>
    <string name="fragment_tag_login">fragment_login</string>
    <string name="fragment_tag_shlist">fragment_shlist</string>
    <string name="fragment_tag_create_sh">fragment_create_sh</string>
    <string name="fragment_tag_purchase_sh">fragment_purchase_sh</string>
    <string name="title_sh_create_activity">Create new hunt</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_game">SchnitzelHunt</string>
    <string name="title_activity_end_game">Success!</string>
...
